syntax = "proto3";
package protobuf;
option go_package = "pb/protobuf";

message InternalMsg {
  bytes messageID = 1;
  uint32 command = 2;
  optional string clientAddress = 3;
  optional bytes kVRequest = 4;
  optional string migrationRangeLowerbound = 5;
  optional string migrationRangeUpperbound = 6;
  optional string migrationDestinationAddress = 7;
}